Part 04 StoreContext (including,Config,Migrations)

--- a/LinkDev.Talabat.APIs/appsettings.Development.json
+++ b/LinkDev.Talabat.APIs/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StoreContext": "Server = .; Database = Talabat.APIs ; Trusted_Connection = True ; TrustServerCertificate = True"
   }
 }
