--- a/LinkDev.Talabat.APIs/LinkDev.Talabat.APIs.csproj
+++ b/LinkDev.Talabat.APIs/LinkDev.Talabat.APIs.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LinkDev.Talabat.APIs.Controllers\LinkDev.Talabat.APIs.Controllers.csproj" />
+    <ProjectReference Include="..\LinkDev.Talabat.Core.Applicarion\LinkDev.Talabat.Core.Applicarion.csproj" />
     <ProjectReference Include="..\LinkDev.Talabat.Core.Application.Abstraction\LinkDev.Talabat.Core.Application.Abstraction.csproj" />
     <ProjectReference Include="..\LinkDev.Talabat.Infrastructure.Persistence\LinkDev.Talabat.Infrastructure.Persistence.csproj" />
   </ItemGroup>
