Part 13 Product Picture UrlResolver

--- a/LinkDev.Talabat.APIs/appsettings.Development.json
+++ b/LinkDev.Talabat.APIs/appsettings.Development.json
@@ -5,8 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "StoreContext": "Server = .; Database = Talabat.APIs ; Trusted_Connection = True ; TrustServerCertificate = True"
-  }
+  "AllowedHosts": "*"
+  
 }
