--- a/LinkDev.Talabat.APIs/appsettings.json
+++ b/LinkDev.Talabat.APIs/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StoreContext": "Server = .; Database = Talabat.APIs ; Trusted_Connection = True ; TrustServerCertificate = True"
+  },
+  "Urls": {
+    "ApiBaseUrl": "https://localhost:7034"
+  }
 }
