--- a/LinkDev.Talabat.APIs/LinkDev.Talabat.APIs.csproj
+++ b/LinkDev.Talabat.APIs/LinkDev.Talabat.APIs.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\LinkDev.Talabat.Core.Applicarion\LinkDev.Talabat.Core.Applicarion.csproj" />
     <ProjectReference Include="..\LinkDev.Talabat.Core.Application.Abstraction\LinkDev.Talabat.Core.Application.Abstraction.csproj" />
     <ProjectReference Include="..\LinkDev.Talabat.Infrastructure.Persistence\LinkDev.Talabat.Infrastructure.Persistence.csproj" />
+    <ProjectReference Include="..\LinkDev.Talabat.Infrastructure\LinkDev.Talabat.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
