Part 02 Identity Module - DbContext

--- a/LinkDev.Talabat.Infrastructure.Persistence/LinkDev.Talabat.Infrastructure.Persistence.csproj
+++ b/LinkDev.Talabat.Infrastructure.Persistence/LinkDev.Talabat.Infrastructure.Persistence.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Migrations\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
   </ItemGroup>
@@ -18,6 +14,12 @@
   <ItemGroup>
     <ProjectReference Include="..\LinkDev.Talabat.Core.Application.Abstraction\LinkDev.Talabat.Core.Application.Abstraction.csproj" />
     <ProjectReference Include="..\LinkDev.Talabat.Core.Domain\LinkDev.Talabat.Core.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="_Identity\Interceptors\" />
+    <Folder Include="_Identity\Migrations\" />
+    <Folder Include="_Identity\Seeds\" />
   </ItemGroup>
 
 </Project>
