--- a/LinkDev.Talabat.APIs/appsettings.json
+++ b/LinkDev.Talabat.APIs/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "StoreContext": "Server = .; Database = Talabat.APIs ; Trusted_Connection = True ; TrustServerCertificate = True",
+    "IdentityContext": "Server = .; Database = Talabat.Identity.APIs ; Trusted_Connection = True ; TrustServerCertificate = True",
     "Redis": "localhost"
   },
   "Urls": {
